Fixing why choose us alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -481,7 +481,7 @@ body {
   }
   #whyChooseUs .cs-item {
     width: 100%;
-    text-align: left;
+    text-align: center;
     list-style: none;
     margin: 0;
     /* 24px - 32px */
@@ -494,8 +494,8 @@ body {
     grid-row: span 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
     position: relative;
     z-index: 1;
   }
